# agenteval

./: .gitignore  README.md  go.mod  go.sum  pyproject.toml
cmd/agenteval/: main.go
internal/extractor/: extractor.go
internal/fetcher/: fetcher.go
internal/models/: models.go
internal/prompt/: cleanup.go
internal/runner/: runner.go
internal/scorer/: scorer.go
src/agenteval/: __init__.py  cli.py  models.py  pr_fetcher.py  prompt_cleanup.py  runner.py  scorer.py  task_extractor.py
tests/: test_cli.py  test_runner_scorer.py
