[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agenteval"
version = "0.1.0"
description = "Turn git history into eval suites for coding agents"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "pygithub>=2.0.0",
    "pydantic>=2.0.0",
    "anthropic>=0.20.0",
    "rich>=13.0.0",
]

[project.scripts]
agenteval = "agenteval.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/agenteval"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]
